[gd_scene load_steps=3 format=3 uid="uid://ui_save_slot_card"]

[ext_resource type="Theme" uid="uid://theme_main_base" path="res://resources/themes/main_theme.tres" id="1_theme"]
[ext_resource type="Script" path="res://scripts/ui/components/SaveSlotCard.gd" id="2_script"]

[node name="SaveSlotCard" type="PanelContainer"]
custom_minimum_size = Vector2(0, 100)
offset_right = 500.0
offset_bottom = 100.0
theme = ExtResource("1_theme")
script = ExtResource("2_script")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="TitleLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Slot 1"

[node name="InfoLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Level 5 | $5000
2023-10-25 14:30"

[node name="ActionsContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ActionButton" type="Button" parent="HBoxContainer/ActionsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "JUGAR"

[node name="DeleteButton" type="Button" parent="HBoxContainer/ActionsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
text = "ðŸ—‘"

[connection signal="pressed" from="HBoxContainer/ActionsContainer/ActionButton" to="." method="_on_action_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ActionsContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
